Made changes to fix 2.2 Bugs i.e (Displaying Last upload date, removing flipping download Popup, displaying Stander file format label in proper alignment and corrected spelling mistakes in RejectedMF transaction screen.)

--- a/WealthERPSolution/UI/WealthERP/App_Themes/Maroon/StyleSheet.css
+++ b/WealthERPSolution/UI/WealthERP/App_Themes/Maroon/StyleSheet.css
@@ -99,6 +99,12 @@ div#MainDivLeft
     color: red;
 }
 
+.UploadDateLbl
+{
+    font-size: small;
+    color: Maroon;
+}
+
 .SuccessMsg
 {
     font-family: Verdana,Tahoma;
@@ -852,7 +858,7 @@ p.tip
     padding-top: 10px;
     padding-left: 50px;
     width: 250px;
-    position: absolute; z-index: 100001; left: 280px; top: 35px !important; 
+    
     
 }
 /* End */
